--- a/src/App.css
+++ b/src/App.css
@@ -431,7 +431,7 @@ img {
 
 /* Change Background */
 .scroll-header {
-  box-shadow: 0 -1px 4px rgba(0,0,0,0.15);
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* Home CSS */
@@ -880,7 +880,6 @@ img {
 .work__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  
 }
 
 .work__padding {
@@ -906,11 +905,9 @@ img {
 
 /* Active work */
 .active-work {
-    background-color: var(--title-color);
-    color: var(--container-color);
+  background-color: var(--title-color);
+  color: var(--container-color);
 }
-
-
 
 /* Breakpoints */
 /* Large */
@@ -1007,48 +1004,36 @@ img {
 
   /* Qualification */
   .qualification__container {
-        margin-left: auto;
-        margin-right: auto;
-    }
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    /* Scroll Up */
-    .scrollup {
-      right: 1.5rem;
-      padding: 0.25rem 0.4rem;
-      bottom: 10%;
-    }
-  
-    .scrollup__icon {
-      font-size: 1.25rem;
-    }
+  /* Scroll Up */
+  .scrollup {
+    right: 1.5rem;
+    padding: 0.25rem 0.4rem;
+    bottom: 10%;
+  }
 
-    /* Services*/
-    .services__container {
-      grid-template-columns: repeat(2, 218px);
-    }
+  .scrollup__icon {
+    font-size: 1.25rem;
+  }
 
-    /* Skill */
-    .skills__container {
-      grid-template-columns: max-content;
-      row-gap: 2rem;
-    }
+  /* Services*/
+  .services__container {
+    grid-template-columns: repeat(2, 218px);
+  }
 
-    /* Work */
-    .work__container {
-      gap: 1.25rem;
-    }
-  
-    .work__card {
-      padding: 1rem;
-    }
-  
-    .work__img {
-      margin-bottom: 0.75rem;
-    }
-  
-    .work__title {
-      margin-bottom: 0.25rem;
-    }
+  /* Skill */
+  .skills__container {
+    grid-template-columns: max-content;
+    row-gap: 2rem;
+  }
+
+  /* Work */
+  .work__container {
+    gap: 1.25rem;
+  }
 }
 /* Medium */
 @media screen and (max-width: 768px) {
@@ -1144,56 +1129,55 @@ img {
   .home__content {
     grid-template-columns: 0.5fr 3fr;
     padding-top: 3.5rem;
-   }
-  
-   .home__img {
+  }
+
+  .home__img {
     order: initial;
     justify-self: initial;
-   }
-  
-   .home__data {
+  }
+
+  .home__data {
     grid-column: 1/3;
-   }
-   .home__img {
+  }
+  .home__img {
     box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
     width: 200px;
     height: 200px;
-   }
-  
-   .home__scroll {
+  }
+
+  .home__scroll {
     display: none;
-   }
-
-   /* Qualification */
-   .qualification__container {
-        margin-left: var(--mb-1-5);
-        margin-right: var(--mb-1-5);
-    }
-
-    /* Scroll Up */
-    .show-scroll {
-      bottom: -10%;
-    }
-
-    /* Services */
-    .services__container {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  
-    .services__content {
-      padding: 3.5rem 0.5rem 1.25rem 1.5rem;
-    }
-  
-    .services__icon {
-      font-size: 1.5rem;
-    }
-
-    /* Work */
-    .work__container {
-      grid-template-columns: max-content;
   }
 
+  /* Qualification */
+  .qualification__container {
+    margin-left: var(--mb-1-5);
+    margin-right: var(--mb-1-5);
   }
+
+  /* Scroll Up */
+  .show-scroll {
+    bottom: -10%;
+  }
+
+  /* Services */
+  .services__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .services__content {
+    padding: 3.5rem 0.5rem 1.25rem 1.5rem;
+  }
+
+  .services__icon {
+    font-size: 1.5rem;
+  }
+
+  /* Work */
+  .work__container {
+    grid-template-columns: max-content;
+  }
+}
 @media screen and (max-width: 576px) {
   /* About */
   .about__info {
@@ -1214,38 +1198,38 @@ img {
 
   /* Qualification */
   .qualification__sections {
-        grid-template-columns: initial;
-    }
+    grid-template-columns: initial;
+  }
 
-    .qualification__button {
-        margin: 0 var(--mb-0-75);
-    }
+  .qualification__button {
+    margin: 0 var(--mb-0-75);
+  }
 
-    /* Services */
-    .services__modal-content {
-      padding: 4.5rem 1.5rem 2.5rem;
-    }
-  
-    .services__modal-description {
-      padding: 0;
-    }
+  /* Services */
+  .services__modal-content {
+    padding: 4.5rem 1.5rem 2.5rem;
+  }
 
-    /* Skills */
-    .skills__container {
-      grid-template-columns: 1fr;
-    }
-  
-    .skills__content {
-      padding: 1.5rem;
-    }
+  .services__modal-description {
+    padding: 0;
+  }
 
-    /* Work */
-    .work__container {
-      grid-template-columns: 1fr;
+  /* Skills */
+  .skills__container {
+    grid-template-columns: 1fr;
+  }
+
+  .skills__content {
+    padding: 1.5rem;
+  }
+
+  /* Work */
+  .work__container {
+    grid-template-columns: max-content;
   }
 
   .work__img {
-      width: 100%;
+    width: 100%;
   }
 }
 /* Small */
@@ -1276,38 +1260,38 @@ img {
 
   /* Qualificaton */
   .qualification__data {
-        gap: 0.5rem;
-    }
+    gap: 0.5rem;
+  }
 
-    /* Scroll Up */
-    .scrollup {
-      right: 1rem;
-    }
+  /* Scroll Up */
+  .scrollup {
+    right: 1rem;
+  }
 
-    /* Services */
-    .services__container {
-      grid-template-columns: max-content;
-    }
-  
-    .services__content {
-      padding-right: 6rem;
-    }
+  /* Services */
+  .services__container {
+    grid-template-columns: max-content;
+  }
 
-    /* Skills */
-    .skills__box {
-      column-gap: 1.25rem;
-    }
-  
-    .skills__name {
-      font-size: var(--small-font-size);
-    }
+  .services__content {
+    padding-right: 6rem;
+  }
 
-    /* work */
-    .work__item {
-      font-size: var(--small-font-size);
+  /* Skills */
+  .skills__box {
+    column-gap: 1.25rem;
+  }
+
+  .skills__name {
+    font-size: var(--small-font-size);
+  }
+
+  /* work */
+  .work__item {
+    font-size: var(--small-font-size);
   }
 
   .work__filters {
-      column-gap: 0.25rem;
+    column-gap: 0.25rem;
   }
 }
